@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Version 5.6.7 (SVN branch-5-6):
 ---------------------------
 
+- Fixed mssql2008 to return correct geometries with chart layer type (#3894)
+
 - Fix segfault with png-inimage exceptions and quantize_force=on (#2903)
 
 - Fix segfault on malformed <PropertyIsLike> filters (#3888)
